src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: 'Inter', sans-serif;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 97%;
    --card-foreground: 222.2 84% 4.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
 
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
 
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
 
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 0 0% 97%;
    --ring: 222.2 84% 4.9%;
 
    --radius: 0.5rem;
    
    --chart-1: 43 74% 66%;
    --chart-2: 173 58% 59%;
    --chart-3: 197 57% 64%;
    --chart-4: 27 87% 67%;
    --chart-5: 210 60% 75%;
    --header: 248 248 248; /* rgba(248, 248, 248, 1) */
    --header-foreground: 222.2 84% 4.9%;
    --footer-border: 197 197 197; /* rgba(197, 197, 197, 1) */

    --search-bar: 0, 0%, 77%, 1; /* #4D4D4D */
  }
 
  .dark {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 97%;
    --card-foreground: 222.2 84% 4.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
 
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
 
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
 
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 0 0% 97%;
    --ring: 222.2 84% 4.9%;
 
    --radius: 0.5rem;
    
    --chart-1: 43 74% 66%;
    --chart-2: 173 58% 59%;
    --chart-3: 197 57% 64%;
    --chart-4: 27 87% 67%;
    --chart-5: 210 60% 75%;
    --header: 248 248 248; /* rgba(248, 248, 248, 1) */
    --header-foreground: 222.2 84% 4.9%;
    --footer-border: 197 197 197; /* rgba(197, 197, 197, 1) */

    --search-bar: 0, 0%, 77%, 1; /* #4D4D4D */
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

@layer components {
  .ranking-row {
    display: grid;
    grid-template-columns: repeat(24, minmax(0, 1fr));
    gap: 0.5rem;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    padding-top: 0.375rem;
    padding-bottom: 0.375rem;
    align-items: center;
    min-height: 48px;
  }

  .ranking-logo {
    @apply w-8 h-8 flex-shrink-0 flex items-center justify-center bg-white p-0.5 rounded;
  }

  .ranking-logo img {
    @apply max-w-full max-h-full object-contain;
  }
}

